@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-1-8-13
+DATE: 08/05/2014
+STAFF: lec
+CHANGES:
+a) TR11745/mgd/GO_stats.py/add 'GO Central' to the GO_CLAUSE
+
 TAG: qcreports_db-5-1-8-12
 DATE: 07/17/2014
 STAFF: lec
